# raspi-pico-w-intro

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
blinkSerial/: CMakeLists.txt  blinkSerial.c
serialBlink/: CMakeLists.txt
